@@ -108,13 +108,12 @@ public class ConfigSetApiLockingTest extends SolrTestCaseJ4 {
     // Wait for acquisition of the base config set lock on another thread (and be notified via a
     // latch)
     final CountDownLatch latch = new CountDownLatch(1);
-    new Thread(
+    Thread.ofVirtual().start(
             () -> {
               csBaseLock.waitUntilAcquired();
               // countDown() will not be called if waitUntilAcquired() threw an exception
               latch.countDown();
-            })
-        .start();
+            });
 
     // Wait for the thread to start and to get blocked in waitUntilAcquired()
     // (thread start could have been checked more reliably using another latch, and verifying the
