@@ -159,11 +159,8 @@ public class TestStressInPlaceUpdates extends AbstractFullDistribZkTestBase {
 
     for (int i = 0; i < nWriteThreads; i++) {
       Thread thread =
-          new Thread("WRITER" + i) {
+          Thread.ofPlatform().name("WRITER" + i).unstarted(() -> {
             Random rand = new Random(random().nextInt());
-
-            @Override
-            public void run() {
               try {
                 while (operations.decrementAndGet() > 0) {
                   int oper = rand.nextInt(50);
@@ -371,8 +368,7 @@ public class TestStressInPlaceUpdates extends AbstractFullDistribZkTestBase {
                 log.error("", e);
                 throw new RuntimeException(e);
               }
-            }
-          };
+          });
 
       threads.add(thread);
     }
@@ -380,11 +376,8 @@ public class TestStressInPlaceUpdates extends AbstractFullDistribZkTestBase {
     // Read threads
     for (int i = 0; i < nReadThreads; i++) {
       Thread thread =
-          new Thread("READER" + i) {
+          Thread.ofPlatform().name("READER" + i).unstarted(() -> {
             Random rand = new Random(random().nextInt());
-
-            @Override
-            public void run() {
               try {
                 while (operations.decrementAndGet() >= 0) {
                   // bias toward a recently changed doc
@@ -496,8 +489,7 @@ public class TestStressInPlaceUpdates extends AbstractFullDistribZkTestBase {
                 log.error("", e);
                 throw new RuntimeException(e);
               }
-            }
-          };
+          });
 
       threads.add(thread);
     }
