@@ -171,13 +171,12 @@ public class CollectionApiLockingTest extends SolrTestCaseJ4 {
 
     // Wait for acquisition of the replica lock on another thread (and be notified via a latch)
     final CountDownLatch latch = new CountDownLatch(1);
-    new Thread(
+    Thread.ofVirtual().start(
             () -> {
               replicaShard1Lock.waitUntilAcquired();
               // countDown() will not be called if waitUntilAcquired() threw any kind of exception
               latch.countDown();
-            })
-        .start();
+            });
 
     // Wait for the thread to start and to get blocked in waitUntilAcquired() (thread start could
     // have been checked more reliably using another latch, and verifying the thread is in
