@@ -312,18 +312,14 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
       assertFalse(newCore.getSolrConfig().useColdSearcher);
 
       Thread t =
-          new Thread() {
-            @Override
-            public void run() {
+          Thread.ofVirtual().unstarted(() -> {
               try {
                 doQuery(newCore);
                 querySucceeded.set(true);
               } catch (Exception e) {
                 throw new RuntimeException(e);
               }
-            }
-            ;
-          };
+          });
       t.start();
 
       if (System.getProperty(SYSPROP_NIGHTLY) != null) {
@@ -385,18 +381,14 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
       assertTrue(newCore.getSolrConfig().useColdSearcher);
 
       Thread t =
-          new Thread() {
-            @Override
-            public void run() {
+          Thread.ofVirtual().unstarted(() -> {
               try {
                 doQuery(newCore);
                 querySucceeded.set(true);
               } catch (Exception e) {
                 throw new RuntimeException(e);
               }
-            }
-            ;
-          };
+          });
       t.start();
 
       // validate that the query runs before the searcher warmer finishes
