@@ -125,7 +125,7 @@ public class TestSolrCachePerf extends SolrTestCaseJ4 {
       long startTime = System.nanoTime();
       for (int i = 0; i < numThreads; i++) {
         Thread t =
-            new Thread(
+            Thread.ofVirtual().unstarted(
                 () -> {
                   try {
                     startLatch.await();
