@@ -383,10 +383,7 @@ public class TestFieldCache extends SolrTestCase {
             });
     for (int threadIDX = 0; threadIDX < NUM_THREADS; threadIDX++) {
       threads[threadIDX] =
-          new Thread() {
-            @Override
-            public void run() {
-
+          Thread.ofPlatform().unstarted(() -> {
               try {
                 while (!failed.get()) {
                   final int op = random().nextInt(3);
@@ -419,8 +416,7 @@ public class TestFieldCache extends SolrTestCase {
                 restart.reset();
                 throw new RuntimeException(t);
               }
-            }
-          };
+          });
       threads[threadIDX].start();
     }
 
