@@ -136,21 +136,17 @@ public class SignatureUpdateProcessorFactoryTest extends SolrTestCaseJ4 {
     threads = new Thread[7];
     for (int i = 0; i < threads.length; i++) {
       threads[i] =
-          new Thread() {
-
-            @Override
-            public void run() {
-              for (int i = 0; i < 30; i++) {
-                // h.update(adoc("id", Integer.toString(1+ i), "v_t",
+          Thread.ofPlatform().unstarted(() -> {
+              for (int j = 0; j < 30; j++) {
+                // h.update(adoc("id", Integer.toString(1+ j), "v_t",
                 // "Goodbye Dude girl!"));
                 try {
-                  addDoc(adoc("id", Integer.toString(1 + i), "v_t", "Goodbye Dude girl!"));
+                  addDoc(adoc("id", Integer.toString(1 + j), "v_t", "Goodbye Dude girl!"));
                 } catch (Exception e) {
                   throw new RuntimeException(e);
                 }
               }
-            }
-          };
+          });
 
       threads[i].setName("testThread-" + i);
     }
@@ -158,23 +154,19 @@ public class SignatureUpdateProcessorFactoryTest extends SolrTestCaseJ4 {
     threads2 = new Thread[3];
     for (int i = 0; i < threads2.length; i++) {
       threads2[i] =
-          new Thread() {
-
-            @Override
-            public void run() {
-              for (int i = 0; i < 10; i++) {
-                // h.update(adoc("id" , Integer.toString(1+ i + 10000), "v_t",
+          Thread.ofPlatform().unstarted(() -> {
+              for (int j = 0; j < 10; j++) {
+                // h.update(adoc("id" , Integer.toString(1+ j + 10000), "v_t",
                 // "Goodbye Dude girl"));
                 // h.update(commit());
                 try {
-                  addDoc(adoc("id", Integer.toString(1 + i), "v_t", "Goodbye Dude girl!"));
+                  addDoc(adoc("id", Integer.toString(1 + j), "v_t", "Goodbye Dude girl!"));
                   addDoc(commit());
                 } catch (Exception e) {
                   throw new RuntimeException(e);
                 }
               }
-            }
-          };
+          });
 
       threads2[i].setName("testThread2-" + i);
     }
